--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <h3>I can solve problems easilys</h3>
             <a href="#Projects" class="project-btn">My Projects</a>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/mohamed-ahmed-b1b597255/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/Mohamed-Ahmed-Kamel"><i class="fa-brands fa-square-github"></i></a>
-                <a href="https://m.facebook.com/profile.php/?id=100013186572597"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/mohamed-ahmed-b1b597255/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Mohamed-Ahmed-Kamel" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+                <a href="https://m.facebook.com/profile.php/?id=100013186572597" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
             </div>
         </div>
 
@@ -188,9 +188,9 @@
     <footer class="footer">
         <p class="footer-title">Copyrights @ <span>Mohamed Ahmed Kamel</span></p>
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/mohamed-ahmed-b1b597255/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/Mohamed-Ahmed-Kamel"><i class="fa-brands fa-square-github"></i></a>
-            <a href="https://m.facebook.com/profile.php/?id=100013186572597"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="https://www.linkedin.com/in/mohamed-ahmed-b1b597255/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Mohamed-Ahmed-Kamel" target="_blank"><i class="fa-brands fa-square-github"></i></a>
+            <a href="https://m.facebook.com/profile.php/?id=100013186572597" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
         </div>
     </footer>
 </body>
