add links to the projects

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p class="project-category">This is a simple product management app that allows you to create, update, delete, and search products. The products are stored in local storage.</p>
                     <strong class="project-title">
                         <span>Product Management Project</span>
-                        <a href="https://mohamed-ahmed-kamel.github.io/Product-Management-Project/" class="more-details">More details</a>
+                        <a href="https://mohamed-ahmed-kamel.github.io/Product-Management-Project/" target="_blank" class="more-details">Try</a>
                     </strong>
                 </div>
             </div>
@@ -123,8 +123,8 @@
                 <div class="project-info">
                     <p class="project-category">This is an Express.js application that uses Passport.js for authentication and includes routes for managing a pharmacy, markets, and user authentication.</p>
                     <strong class="project-title">
-                        <span>Nodejs Product tutorial</span>
-                        <a href="#" class="more-details">More details</a>
+                        <span>Nodejs Product tutorial 2</span>
+                        <a href="https://github.com/Mohamed-Ahmed-Kamel/NodeJS-Tutorial-2" target="_blank" class="more-details">More details</a>
                     </strong>
                 </div>
             </div>
@@ -136,21 +136,34 @@
                 <div class="project-info">
                     <p class="project-category">This is an Express app that uses EJS as the view engine and MongoDB as the database. The app also includes livereload for auto-refreshing during development. The app can also Create and Delete</p>
                     <strong class="project-title">
-                        <span>Nodejs Product tutorial</span>
-                        <a href="#" class="more-details">More details</a>
+                        <span>Nodejs Product tutorial 1</span>
+                        <a href="https://github.com/Mohamed-Ahmed-Kamel/NodeJS-Tutorial-1" target="_blank" class="more-details">More details</a>
                     </strong>
                 </div>
             </div>
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="./images/landingPage.png" />
+                    <img src="./images/weather app 2.png" />
                 </div>
                 <div class="project-info">
-                    <p class="project-category">Discription</p>
+                    <p class="project-category">This is a simple weather app that allows users to search for the weather in a specific city. The app displays the current temperature, humidity, and wind speed for the selected city.</p>
+                    <strong class="project-title">
+                        <span>weather app project</span>
+                        <a href="https://github.com/Mohamed-Ahmed-Kamel/weather-app" target="_blank" class="more-details">More details</a>
+                    </strong>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="./images/landing page.png" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">This JavaScript code creates a dynamic navigation menu for a webpage with multiple sections. The navigation menu is built by looping over all the sections on the page and creating a list item for each section with a link to that section. The navigation menu is then appended to the navbar__list element on the page.</p>
                     <strong class="project-title">
                         <span>Manipulating the DOM</span>
-                        <a href="#" class="more-details">More details</a>
+                        <a href="https://mohamed-ahmed-kamel.github.io/landing-page-Udacity/#section1" target="_blank" class="more-details">Try</a>
                     </strong>
                 </div>
             </div>
