--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="icon" href="./icons/user icon.png">
+    <link rel="icon" href="./icons/me.jpg">
     <title>Profile</title>
 </head>
 
@@ -18,9 +18,7 @@
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="check-btn"><i class="fa-solid fa-bars"></i></label>
-
-        <label class="logo">Mohamed</label>
-
+        <label class="logo">Protfolio</label>
         <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Skills">Skills</a></li>
@@ -32,7 +30,7 @@
 
     <section class="main" id="Home">
         <div>
-            <h2>Hi my name is "Mohamed" I am a<br><span>Back-End Developer</span></h2>
+            <h2>Hi&#128075 my name is "Mohamed" I am a<br><span>Back-End Developer</span></h2>
             <h3>I can solve problems easilys</h3>
             <a href="#Projects" class="project-btn">My Projects</a>
             <div class="social-icons">
@@ -43,10 +41,9 @@
         </div>
 
         <div class="me-image">
-            <img src="./images/meE.png">
+            <img src="./images/me-2.png">
         </div>
     </section>
-
 
     <section class="skills-cards" id="Skills">
         <h2 class="title">Skills</h2>
@@ -99,11 +96,10 @@
         </div>
     </section>
 
-
     <section class="projects" id="Projects">
         <h2 class="title">Projects</h2>
         <div class="content">
-            <div class="project-card">
+            <div class="project-card ex-project">
                 <div class="project-image">
                     <img src="./images/PMP.png" />
                 </div>
@@ -170,7 +166,6 @@
         </div>
     </section>
 
-
     <section class="contact" id="Contact">
         <h2 class="title">Lit's work together</h2>
 
@@ -196,7 +191,6 @@
             </div>
         </div>
     </section>
-
 
     <footer class="footer">
         <p class="footer-title">Copyrights @ <span>Mohamed Ahmed Kamel</span></p>
