Fix some problems

--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Back-end Developer">
     <meta name="keywords" content="back end developer, web profile, nodejs">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="./icons/me.jpg">
-    <title>Profile</title>
+    <title>Portfolio</title>
 </head>
 
 <body>
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="check-btn"><i class="fa-solid fa-bars"></i></label>
-        <label class="logo">Protfolio</label>
+        <label class="logo">Portfolio</label>
         <ul>
             <li><a href="#Home">Home</a></li>
             <li><a href="#Skills">Skills</a></li>
@@ -101,6 +100,23 @@
         <div class="content">
             <div class="project-card ex-project">
                 <div class="project-image">
+                    <img src="./images/e-commerce.jpg" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">This E-Commerce API is a RESTful API built with Express and MongoDB. It allows users to manage products, blogs, product categories, blog categories, brands, coupons, colors, and enquiries.</p>
+                    <strong class="project-title">
+                        <span>Online Store Project</span>
+                        <a href="#" target="_blank" class="more-details">More details</a>
+                    </strong>
+                </div>
+                <div class="lang">
+                    <span>JS</span>
+                    <span>NodeJS</span>
+                </div>
+            </div>
+
+            <div class="project-card ex-project">
+                <div class="project-image">
                     <img src="./images/PMP.png" />
                 </div>
                 <div class="project-info">
@@ -109,6 +125,11 @@
                         <span>Product Management Project</span>
                         <a href="https://mohamed-ahmed-kamel.github.io/Product-Management-Project/" target="_blank" class="more-details">Try</a>
                     </strong>
+                </div>
+                <div class="lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
                 </div>
             </div>
 
@@ -123,6 +144,10 @@
                         <a href="https://github.com/Mohamed-Ahmed-Kamel/NodeJS-Tutorial-2" target="_blank" class="more-details">More details</a>
                     </strong>
                 </div>
+                <div class="lang">
+                    <span>JS</span>
+                    <span>NodeJS</span>
+                </div>
             </div>
             
             <div class="project-card">
@@ -135,6 +160,12 @@
                         <span>Nodejs Product tutorial 1</span>
                         <a href="https://github.com/Mohamed-Ahmed-Kamel/NodeJS-Tutorial-1" target="_blank" class="more-details">More details</a>
                     </strong>
+                </div>
+                <div class="lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    <span>NodeJS</span>
                 </div>
             </div>
 
@@ -149,6 +180,11 @@
                         <a href="https://github.com/Mohamed-Ahmed-Kamel/weather-app" target="_blank" class="more-details">More details</a>
                     </strong>
                 </div>
+                <div class="lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                </div>
             </div>
 
             <div class="project-card">
@@ -161,6 +197,11 @@
                         <span>Manipulating the DOM</span>
                         <a href="https://mohamed-ahmed-kamel.github.io/landing-page-Udacity/#section1" target="_blank" class="more-details">Try</a>
                     </strong>
+                </div>
+                <div class="lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
                 </div>
             </div>
         </div>
@@ -185,7 +226,7 @@
                     <i class="fa-solid fa-envelope"></i>
                 </div>
                 <div class="info">
-                    <h3>Mail</h3>
+                    <h3>Gmail</h3>
                     <p>MohamedAhmedKamel159@gmail.com</p>
                 </div>
             </div>
