--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="main" id="Home">
         <div>
             <h2>Hi&#128075 my name is "Mohamed" I am a<br><span>Back-End Developer</span></h2>
-            <h3>I can solve problems easilys</h3>
+            <h3>I can solve problems easilys.</h3>
             <a href="#Projects" class="project-btn">My Projects</a>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/mohamed-ahmed-b1b597255/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
