--- a/index.html
+++ b/index.html
@@ -98,7 +98,45 @@
     <section class="projects" id="Projects">
         <h2 class="title">Projects</h2>
         <div class="content">
-            <div class="project-card ex-project">
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="./images/pizza.png" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">This is a web application built with Express.js, EJS, and MongoDB.<br><strong>Features:</strong><br>User authentication with Passport.js <br>Session management with express-session<br>Flash messages with express-flash<br>Real-time updates with Socket.io</p>
+                    <strong class="project-title">
+                        <span>Realtime Pizza Order</span>
+                        <a href="https://github.com/Mohamed-Ahmed-Kamel/Realtime_pizza_order" target="_blank" class="more-details">More details</a>
+                    </strong>
+                </div>
+                <div class="lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>tailwind</span>
+                    <span>NodeJS</span>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="./images/pharmacy store.png" />
+                </div>
+                <div class="project-info">
+                    <p class="project-category">This is a simple e-commerce application built with Node.js and Express.js.<br><strong>Features:</strong><br>User authentication with Passport.js<br>Session management with express-session<br>MongoDB database connection<br>EJS templating and layouts<br>Routes for home, authentication, cart, and admin functionalities</p>
+                    <strong class="project-title">
+                        <span>Pharmacy Store</span>
+                        <a href="https://github.com/Mohamed-Ahmed-Kamel/Pharmacy_Store" target="_blank" class="more-details">More details</a>
+                    </strong>
+                </div>
+                <div class="lang">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JS</span>
+                    <span>NodeJS</span>
+                </div>
+            </div>
+
+            <div class="project-card">
                 <div class="project-image">
                     <img src="./images/e-commerce.jpg" />
                 </div>
@@ -115,7 +153,7 @@
                 </div>
             </div>
 
-            <div class="project-card ex-project">
+            <div class="project-card">
                 <div class="project-image">
                     <img src="./images/PMP.png" />
                 </div>
